# factorize

./: CMakeLists.txt  CMakeOptions.txt  README.md
client/: CMakeLists.txt  client.c  client.h  main.c  network_connection.c  network_connection.h  result.c  result.h
cmake/: CodeCoverage.cmake
lib/: CMakeLists.txt  factorize.c  factorize.h
server/: CMakeLists.txt  main.c  network.c  network.h  processor.c  processor.h  protocol.h  server.c  server.h  workqueue.c  workqueue.h
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_result_queue.c  test_result_reporter.c
tests/lib/: CMakeLists.txt  test_factorize.c
tests/server/: CMakeLists.txt  test_processor.c  test_workqueue.c
